# farmaeasy

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .typos.toml  CLAUDE.md  README.md  blue-green-deploy.sh  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json
.github/: GOOGLE_SERVICE_ACCOUNT_SETUP.md
.github/workflows/: api-ci.yml  deploy.yml  front-ci.yml
api/: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
api/docs/: SECURITY_ANALYSIS_BLOCKING.md
api/scripts/migrations/: 001_add_company_fields.py  __init__.py
api/src/: __init__.py  main.py
api/src/acquisitions/: __init__.py  dependencies.py  models.py  router.py  schemas.py  service.py
api/src/attachments/: __init__.py  dependencies.py  models.py  router.py  schemas.py  service.py
api/src/auth/: __init__.py  dependencies.py  models.py  permissions.py  router.py  schemas.py  security.py  service.py  validators.py  verification.py  verification_router.py  verification_schemas.py
api/src/comments/: __init__.py  dependencies.py  models.py  router.py  schemas.py  service.py
api/src/config/: __init__.py  settings.py
api/src/core/: __init__.py  context.py  logging.py  middleware.py  redis.py
api/src/core/database/: __init__.py  async_cassandra.py  cassandra.py
api/src/courses/: dependencies.py  models.py  router.py  schemas.py  service.py
api/src/email/: __init__.py  router.py  schemas.py  service.py  templates.py
api/src/health/: __init__.py  router.py
api/src/metrics/: __init__.py  aggregator.py  collector.py  decorators.py  dependencies.py  emitter.py  middleware.py  models.py  router.py  schemas.py  service.py
api/src/notifications/: __init__.py  admin_router.py  dependencies.py  models.py  router.py  schemas.py  service.py  websocket_router.py
api/src/progress/: __init__.py  dependencies.py  models.py  router.py  schemas.py  service.py
api/src/registration_links/: __init__.py  dependencies.py  models.py  router.py  schemas.py  security.py  service.py
api/src/storage/: __init__.py  dependencies.py  router.py  schemas.py  service.py
api/src/utils/: __init__.py  magic_bytes.py
api/src/video/: __init__.py  router.py  schemas.py  service.py
api/tests/: conftest.py  test_health.py  test_metrics.py
api/tests/auth/: test_permissions.py  test_schemas.py  test_security.py  test_student_creation.py  test_users_search.py  test_validators.py
api/tests/comments/: __init__.py  test_blocking.py
api/tests/email/: test_student_welcome_service.py  test_student_welcome_template.py
docker/nginx/: farmaeasy-upstream.conf  nginx-prod.conf  nginx.conf  treinamento-prod.conf
docs/: AUTH_ARCHITECTURE.md
front/: .gitignore  CLAUDE.md  README.md  biome.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
front/public/: manifest.json
front/src/: App.tsx  index.css  main.tsx
front/src/components/: WhatsAppBubble.tsx
front/src/components/acquisitions/: CourseStudentsPanel.tsx  GrantAccessDialog.tsx  index.ts
front/src/components/attachments/: AttachmentCard.tsx  AttachmentIcon.tsx  AttachmentList.tsx  AttachmentUpload.tsx  AttachmentsSection.tsx  CourseMaterials.tsx  index.ts
front/src/components/auth/: EmailChangeDialog.tsx  LoginForm.tsx  PasswordStrengthIndicator.tsx  ProtectedRoute.tsx  RegisterWizard.tsx  VerificationCodeInput.tsx  index.ts
front/src/components/comments/: CommentItem.tsx  CommentsSection.tsx  ReactionPicker.tsx  ReportDialog.tsx  index.ts
front/src/components/courses/: CourseEditor.tsx  CourseForm.tsx  LessonCard.tsx  LessonForm.tsx  LessonSelector.tsx  ModuleCard.tsx  ModuleForm.tsx  ModuleSelector.tsx  SortableItem.tsx  SortableList.tsx  index.ts
front/src/components/layout/: AppLayout.tsx  MainNav.tsx  UserMenu.tsx  index.ts
front/src/components/metrics/: KPICard.tsx  PeriodSelector.tsx  RequestsChart.tsx  ResponseTimeChart.tsx  StatusDistribution.tsx  SystemHealthStatus.tsx  TopEndpointsTable.tsx  index.ts
front/src/components/notifications/: NotificationBell.tsx  NotificationItem.tsx  index.ts
front/src/components/progress/: AutoplayCountdown.tsx  CompletionOverlay.tsx  LessonProgressIndicator.tsx  MarkCompleteButton.tsx  index.ts
front/src/components/registration/: CourseAccessPreview.tsx  RegistrationLinkWizard.tsx  index.ts
front/src/components/reviews/: LessonReviewOverlay.test.tsx  LessonReviewOverlay.tsx  index.ts
front/src/components/student/: CourseAccessDenied.tsx  index.ts
front/src/components/theme/: ThemeProvider.tsx  ThemeToggle.test.tsx  ThemeToggle.tsx  index.ts
front/src/components/ui/: alert.tsx  dropdown-menu.tsx  image-preview.tsx  progress.tsx  select.tsx  star-rating.test.tsx  star-rating.tsx  thumbnail-upload.tsx  truncated-text.tsx  user-combobox.tsx
front/src/components/users/: CreateStudentDialog.tsx  CreateUserDialog.tsx  UserDetailsDialog.tsx  index.ts
front/src/components/video/: BunnyPlayer.tsx  VideoSelectorModal.tsx  VideoThumbnail.tsx
front/src/hooks/: useAuth.ts  useComments.ts  useFormPersistence.ts  useNotificationWebSocket.ts  useProgress.ts  useSignedVideoUrl.ts  useUserSearch.ts  useVideoConfig.ts
front/src/hooks/metrics/: index.ts  useMetricsDashboard.ts
front/src/lib/: acquisitions-api.ts  api.ts  attachments-api.ts  comments-api.ts  courses-api.ts  metrics-api.ts  notifications-api.ts  progress-api.ts  registration-links-api.ts  storage-api.ts  users-api.test.ts  users-api.ts  utils.tsx  validators.ts  video-api.ts
front/src/pages/: AdminNotifications.tsx  CourseDetail.tsx  Courses.tsx  Dashboard.tsx  ForgotPassword.tsx  Lessons.tsx  Login.tsx  MetricsDashboard.tsx  ModuleDetail.tsx  Modules.tsx  Register.tsx  RegisterByLinkPage.tsx  RegistrationLinksPage.tsx  ResetPassword.tsx  Settings.tsx  Unauthorized.tsx  Users.tsx
front/src/pages/student/: CourseView.tsx  (+3 more)
front/src/stores/: auth.ts  comments.ts  courses.ts  notifications.ts  progress.ts
front/src/types/: acquisitions.ts  attachments.ts  auth.ts  comments.ts  courses.ts  metrics.ts  notifications.ts  progress.ts  registration-link.ts
(+10 files in other folders)
